--- a/src/components/navbar/Navbar.css
+++ b/src/components/navbar/Navbar.css
@@ -1,3 +1,27 @@
+.nav-container {
+  overflow:hidden;  
+}
+
+.header {
+  padding-left: 50px;
+  display: flex;
+  height: 20%;
+  width: 100%;    
+  background-color: rgb(145, 125, 159);  
+  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  border-bottom: solid 8px lightgray;
+}
+
+h1, .title {
+  display: flex;
+  align-items: center;
+  width: 80%;
+  padding: 20px;
+  color: white;
+  font-size: 60px;  
+  text-decoration: none;    
+}  
+  
   .navbar{
     width: 100%;
     display: flex;
@@ -63,27 +87,40 @@
 
   @media only screen and (max-width: 1263px) {  
     #about, #portfolio, #contact, #resume {
-    padding: 90px 0px;    
+      padding: 90px 0px;    
     }  
+
+    h1{ 
+      width: 60%;  
+    }
  }
 
   @media only screen and (max-width: 1124px) {  
     .nav  {
-    width: 100%;   
+      width: 100%;   
     }
 
    #about, #portfolio, #contact, #resume {
-    padding: 100px 0px;
+      padding: 100px 0px;
     }
+
+    h1{ 
+      align-items: left;
+      width: 40%;  
+      }
  }
 
   @media only screen and (max-width: 1024px) {         
     .nav-item {
-    min-width: 40%;      
+      min-width: 40%;      
     }  
 
     #about, #portfolio, #contact, #resume {
-    padding: 10px 5px;
+      padding: 10px 5px;
+    }
+      
+    h1 { 
+      width: 40%;  
     }
   }        
 
@@ -126,3 +163,4 @@
   }
 
 }
+
