--- a/src/pages/about/About.css
+++ b/src/pages/about/About.css
@@ -1,3 +1,6 @@
+.about-container {
+    width: 100%;
+}
 .about {
     display: flex;    
     flex-wrap: wrap; 
