--- a/src/pages/contact/Contact.css
+++ b/src/pages/contact/Contact.css
@@ -1,3 +1,7 @@
+.contact-container {
+  width: 100%;
+}
+
 .contact {
   display: flex;
   flex-direction: column;
