--- a/src/pages/main/Main.css
+++ b/src/pages/main/Main.css
@@ -1,4 +1,4 @@
-.body {
+/* .body {
     display: flex;
     flex-direction: column;   
     min-height: 100vh;
@@ -32,7 +32,7 @@
   }
 
   .footer {      
-    /* position: absolute; */
+    position: absolute;
     padding-top: 40px;
     bottom:0;
     height: 2.5rem;       
@@ -58,4 +58,4 @@
    h1{ 
     width: 40%;  
   }
-}
+} */
